fix: access websocket directly by chat service