@@ -1,12 +1,14 @@
 package com.iwaproject.chat.config;
 
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.util.StringUtils;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -35,32 +37,50 @@ public class CorsConfig {
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
+        List<String> directOrigins = new ArrayList<>();
+        Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(StringUtils::hasText)
+                .forEach(directOrigins::add);
 
-        // Only allow Gateway origin
-        configuration.setAllowedOrigins(
-                Arrays.asList(allowedOrigins.split(","))
-        );
+        if (!directOrigins.contains("null")) {
+            directOrigins.add("null");
+        }
 
-        // Allow all HTTP methods
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
-        ));
+        return new CorsConfigurationSource() {
+            @Override
+            public CorsConfiguration getCorsConfiguration(final HttpServletRequest request) {
+                String requestUri = request.getRequestURI();
+                
+                // For WebSocket endpoints, always return CORS config (needed for SockJS handshake)
+                if (requestUri != null && requestUri.startsWith("/ws")) {
+                    CorsConfiguration configuration = new CorsConfiguration();
+                    configuration.setAllowedOriginPatterns(List.of("*"));
+                    configuration.setAllowedMethods(Arrays.asList(
+                            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+                    ));
+                    configuration.setAllowedHeaders(List.of("*"));
+                    configuration.setAllowCredentials(true);
+                    configuration.setMaxAge(PREFLIGHT_MAX_AGE);
+                    return configuration;
+                }
+                
+                // If the call already comes through the gateway, let it manage CORS headers
+                if (StringUtils.hasText(request.getHeader("X-Gateway-Secret"))) {
+                    return null;
+                }
 
-        // Allow all headers (including X-Username, X-Gateway-Secret)
-        configuration.setAllowedHeaders(List.of("*"));
-
-        // Allow credentials
-        configuration.setAllowCredentials(true);
-
-        // Cache preflight response
-        configuration.setMaxAge(PREFLIGHT_MAX_AGE);
-
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-
-        return source;
+                CorsConfiguration configuration = new CorsConfiguration();
+                configuration.setAllowedOrigins(directOrigins);
+                configuration.setAllowedMethods(Arrays.asList(
+                        "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+                ));
+                configuration.setAllowedHeaders(List.of("*"));
+                configuration.setAllowCredentials(true);
+                configuration.setMaxAge(PREFLIGHT_MAX_AGE);
+                return configuration;
+            }
+        };
     }
 }
 
